// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentContainer component tests matches snapshot 1`] = `
<div
  className="search-page__content"
>
  <div
    className="container background-white pb-40 pb-md-60"
  >
    <Row
      gutter={24}
    >
      <Col
        lg={12}
        span={24}
      >
        <div>
          ResultsSection
        </div>
      </Col>
      <Col
        lg={12}
        span={24}
      >
        <div>
          MapSection
        </div>
      </Col>
      <Col
        span={24}
      >
        <div>
          NearbyDestinationsSection
        </div>
      </Col>
    </Row>
  </div>
  <ExploreCamperRentalsNearby />
</div>
`;

exports[`ContentContainer component tests matches snapshot when isSearchResultsPage 1`] = `
<div
  className="search-page__content search-page__content--search-results search-page__content--map-hidden"
>
  <div
    className="container-fluid background-white d-lg-flex pb-40 pb-md-60"
  >
    <div>
      ResultsSection
    </div>
    <div>
      MapSection
    </div>
  </div>
  <ExploreCamperRentalsNearby />
</div>
`;
